Removed yt. Fixed overflow issue.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   color: #454545;
   font-family: Arial, Helvetica, sans-serif;
@@ -121,7 +129,7 @@ main {
 }
 
 .articles article {
-  padding: 16px 0px;
+  padding: 1rem;
 }
 .articles article h1 {
   font-size: 2rem;
